Fixing spacing -  blue panel
a little breathing room

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,15 @@
 }
 .bluepanel h1 {
     color: #fff;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 .bluepanel p {
     color: #fff;
 }
 .bluepanel ul {
     color: #fff;
+    padding-bottom: 20px;
 }
 .btn-primary {
     color: #fff;
